cif/org.eclipse.escet.cif.tests/tests/event_based/supervisor_synthesis/sup_evt_not_in_plant2.run.err
ERROR: Failed to create supervisor for CIF file "event_based/supervisor_synthesis/sup_evt_not_in_plant2.cif".
CAUSE: CIF supervisor synthesis tool failed due to unsatisfied preconditions:

  --------------------------------------------------------------------------
  (1/1) Event is in the requirement alphabet, but not in the plant alphabet.
  --------------------------------------------------------------------------
   * In automaton "r1":
     - controllable e3;
                    ^
   * In automaton "r2":
     - controllable e4;
                    ^
